--- a/src/pages/hosts.module.scss
+++ b/src/pages/hosts.module.scss
@@ -12,7 +12,3 @@
   grid-column: 1 / -1;
   grid-row: 1 / 2;
 }
-
-.HostsContent {
-  grid-column: 1/-1;
-}
